--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ paginate = 4
 # comment on delete the following lines 11 ~ 13
 pygmentsCodefences = true
 pygmentsCodefencesGuessSyntax = true
+publishDir = “docs”
 
 [params]
   [params.designer]
